--- a/new1.html
+++ b/new1.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dự án 3</title>
+    <title>Sửa lần 3</title>
   </head>
   <body>
-    <h1>Dự án 3</h1>
-    <h2>sửa lần 1</h2>
-    <h2>Sửa lần 2</h2>
+    <h2>Chào tiệp ahhaha</h2>
   </body>
 </html>
